fix: checkmatk not showing

--- a/assets/styles/components/_recipe_ingredients.scss
+++ b/assets/styles/components/_recipe_ingredients.scss
@@ -107,7 +107,7 @@
 
     .checkmark:after {
       z-index: 999;
-      left: 1.8em;
+      left: 2.9em;
       width: 6px; // checkmark's left side length
       height: 12px; // // checkmark's right side length
       border: solid $light;
